ferdig med navbar

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
+      href="https://fonts.googleapis.com/css?family=Gowun Dodum"
+      rel="stylesheet"
+    />
+    <link
       href="https://fonts.googleapis.com/css?family=Inter"
       rel="stylesheet"
     />
@@ -28,7 +32,7 @@
     <!--main-->
     <main>
       <!--introduksjon-->
-      <section class="DisplayFlexColumnRightSpaceBetween" id="introduksjon2">
+      <section class="DisplayFlexColumnRightSpaceBetween" id="introduksjon">
         <div class="imgcontainer">
           <img
             src="img/JupiterIntro.webp"
@@ -57,6 +61,7 @@
       <section class="DisplayFlexColumnMiddleMiddle" id="myswiping">
         <div class="swipey-bar-wrapper">
           <div class="swipey-bar-container">
+            <!--link til Jupiter-->
             <a href="#Jupiter" class="swipey-box">
               <span class="swipey-box-name">
                 <div class="DisplayFlexRowSpaceAroundMiddle menybuttons">
@@ -64,66 +69,116 @@
                     <img
                       src="img/ParallaxJupiter1.webp"
                       alt="ParallaxJupiter1Swipe"
+                      class="ImgSwipe"
                       id="ImgParallaxJupiter1Swipe"
                     />
                   </div>
-                  <div
-                    class="DisplayFlexColumnLeftSpaceAround tekstcontainterswipe"
-                  >
-                    <p>
-                      linker til <br />
-                      Jupiter
-                    </p>
+                  <div class="DisplayFlexColumnLeftMiddle tekstcontainterswipe">
+                    <h3>Jupiter</h3>
+                    <p>Linker til Jupiter</p>
                   </div>
-                </div> </span
-              ><!-- /.swipey-box-name --> </a
-            ><!-- /.swipey-box -->
-
-            <a href="http://www.google.com" class="swipey-box">
-              <span class="swipey-box-name"> Clothing </span
-              ><!-- /.swipey-box-name --> </a
-            ><!-- /.swipey-box -->
-
-            <a href="http://www.google.com" class="swipey-box">
-              <span class="swipey-box-name"> MAN </span
-              ><!-- /.swipey-box-name --> </a
-            ><!-- /.swipey-box -->
-
-            <a href="http://www.google.com" class="swipey-box">
-              <span class="swipey-box-name"> Big & Tall </span
-              ><!-- /.swipey-box-name --> </a
-            ><!-- /.swipey-box -->
-
-            <a href="http://www.google.com" class="swipey-box">
-              <span class="swipey-box-name"> Shoes & Accessories </span
-              ><!-- /.swipey-box-name --> </a
-            ><!-- /.swipey-box -->
-
-            <a href="http://www.google.com" class="swipey-box">
-              <span class="swipey-box-name"> Collections </span
-              ><!-- /.swipey-box-name --> </a
-            ><!-- /.swipey-box -->
-
-            <a href="http://www.google.com" class="swipey-box">
-              <span class="swipey-box-name"> Nights </span
-              ><!-- /.swipey-box-name --> </a
-            ><!-- /.swipey-box -->
-
-            <a href="http://www.google.com" class="swipey-box">
-              <span class="swipey-box-name"> Instashop </span
-              ><!-- /.swipey-box-name --> </a
-            ><!-- /.swipey-box -->
-
-            <a href="http://www.google.com" class="swipey-box">
-              <span class="swipey-box-name"> Sale </span
-              ><!-- /.swipey-box-name --> </a
-            ><!-- /.swipey-box -->
+                </div>
+              </span>
+            </a>
+            <!--Link til Atmosfæren-->
+            <a href="#Atmosfæren" class="swipey-box">
+              <span class="swipey-box-name">
+                <div class="DisplayFlexRowSpaceAroundMiddle menybuttons">
+                  <div class="imgcontainterswipe DisplayFlexColumnMiddleMiddle">
+                    <img
+                      src="img/ParallaxJupiter2.webp"
+                      alt="ParallaxJupiter1Swipe"
+                      class="ImgSwipe"
+                      id="ImgParallaxJupiter2Swipe"
+                    />
+                  </div>
+                  <div class="DisplayFlexColumnLeftMiddle tekstcontainterswipe">
+                    <h3>Atmosfæren</h3>
+                    <p>Linker til Atmosfære</p>
+                  </div>
+                </div>
+              </span>
+            </a>
+            <!--Link til The Great Red Spot-->
+            <a href="#EyeOfTheStorm" class="swipey-box">
+              <span class="swipey-box-name">
+                <div class="DisplayFlexRowSpaceAroundMiddle menybuttons">
+                  <div class="imgcontainterswipe DisplayFlexColumnMiddleMiddle">
+                    <img
+                      src="img/GreatRedSpot.webp"
+                      alt="GreatRedSpotSwipe"
+                      class="ImgSwipe"
+                      id="ImgGreatRedSpotSwipe"
+                    />
+                  </div>
+                  <div class="DisplayFlexColumnLeftMiddle tekstcontainterswipe">
+                    <h3>Great Red Spot</h3>
+                    <p>Linker til <br />The Great Red Spot</p>
+                  </div>
+                </div>
+              </span>
+            </a>
+            <!--Link til Ring-->
+            <a href="#Ring" class="swipey-box">
+              <span class="swipey-box-name">
+                <div class="DisplayFlexRowSpaceAroundMiddle menybuttons">
+                  <div class="imgcontainterswipe DisplayFlexColumnMiddleMiddle">
+                    <img
+                      src="img/ParallaxRings2.webp"
+                      alt="ParallaxRings2Swipe"
+                      class="ImgSwipe"
+                      id="ImgParallaxRings2Swipe"
+                    />
+                  </div>
+                  <div class="DisplayFlexColumnLeftMiddle tekstcontainterswipe">
+                    <h3>Rings</h3>
+                    <p>Linker til Jupiters ringer</p>
+                  </div>
+                </div>
+              </span>
+            </a>
+            <!--LInk til Moons-->
+            <a href="#Moons" class="swipey-box">
+              <span class="swipey-box-name">
+                <div class="DisplayFlexRowSpaceAroundMiddle menybuttons">
+                  <div class="imgcontainterswipe DisplayFlexColumnMiddleMiddle">
+                    <img
+                      src="img/ParallaxMoons.webp"
+                      alt="ParallaxMoonsSwipe"
+                      class="ImgSwipe"
+                      id="ImgParallaxMoonsSwipe"
+                    />
+                  </div>
+                  <div class="DisplayFlexColumnLeftMiddle tekstcontainterswipe">
+                    <h3>Jupiters Moons</h3>
+                    <p>Linker til månene</p>
+                  </div>
+                </div>
+              </span>
+            </a>
+            <!--Europa-->
+            <a href="#Europa" class="swipey-box">
+              <span class="swipey-box-name">
+                <div class="DisplayFlexRowSpaceAroundMiddle menybuttons">
+                  <div class="imgcontainterswipe DisplayFlexColumnMiddleMiddle">
+                    <img
+                      src="img/ParallaxEuropa2.webp"
+                      alt="ParallaxEuropa2Swipe"
+                      class="ImgSwipe"
+                      id="ImgParallaxEuropa2Swipe"
+                    />
+                  </div>
+                  <div class="DisplayFlexColumnLeftMiddle tekstcontainterswipe">
+                    <h3>Europa</h3>
+                    <p>Linker til Europa</p>
+                  </div>
+                </div>
+              </span>
+            </a>
           </div>
-          <!-- /.swipey-bar-container -->
         </div>
       </section>
       <div class="pimg pimgA"></div>
-      <!-- /.swipey-bar-wrapper -->
       <!--Jupiter-->
       <section class="DisplayFlexRowSpaceAroundMiddle" id="Jupiter">
         <img
