hele prosjektet er ferdig, eneste som kan være gøyt er å få implementert med engelsk/norsk knapp, og fit conent flexboxes.

--- a/index.html
+++ b/index.html
@@ -40,19 +40,23 @@
             id="ImgJupiterIntro"
           />
           <div class="imgtekst">
-            <div class="DisplayFlexColumnLeftSpaceAround">
-              <h1>-- Jupiter --</h1>
-              <p>
-                Jupiter er den største planeten i solsystemet, dobbel så stor
-                som massen av alle de andre planetene sin masse til sammen.
-                <br /><br />
-                Nøkkel-stikkord
-              </p>
-              <ul>
-                <li>95 måner</li>
-                <li>2 satelitter</li>
-                <li>Great Red Spot</li>
-              </ul>
+            <div class="DisplayFlexColumnLeftMiddle">
+              <div class="DisplayFlexColumnLeftMiddle">
+                <h1>-- Jupiter --</h1>
+                <p>
+                  Jupiter er den største planeten i solsystemet, dobbel så stor
+                  som massen av alle de andre planetene sin masse til sammen.
+                  <br /><br />
+                </p>
+              </div>
+              <div class="DisplayFlexColumnLeftMiddle">
+                <div>Nøkkel-stikkord</div>
+                <ul>
+                  <li>95 måner</li>
+                  <li>2 satelitter</li>
+                  <li>Great Red Spot</li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
@@ -198,7 +202,7 @@
       </section>
       <div class="pimg pimgB"></div>
       <!--Atmosfæren-->
-      <section class="DisplayFlexRowSpaceAroundTop" id="Atmosfæren">
+      <section class="DisplayFlexRowSpaceAroundMiddle" id="Atmosfæren">
         <div class="DisplayFlexRowSpaceBetweenTop">
           <div class="DisplayFlexColumnLeftTop">
             <h1>Atmosfæren</h1>
@@ -266,7 +270,7 @@
       </section>
       <div class="pimg pimgC"></div>
       <!--EyeOfTheStorm-->
-      <section class="DisplayFlexRowSpaceAroundTop" id="EyeOfTheStorm">
+      <section class="DisplayFlexRowSpaceAroundMiddle" id="EyeOfTheStorm">
         <div class="DisplayFlexColumnMiddleTop firstparagraph">
           <h1>"The Great Red Spot"</h1>
           <p class="DisplayFlexColumnRightTop">
@@ -303,7 +307,7 @@
       </section>
       <div class="pimg pimgD"></div>
       <!--Ring-->
-      <section class="DisplayFlexRowReverseSpaceAroundTop" id="Ring">
+      <section class="DisplayFlexRowReverseSpaceAroundMiddle" id="Ring">
         <div class="DisplayFlexColumnMiddleTop firstparagraph">
           <h1>Jupiters Ringer</h1>
           <p class="DisplayFlexColumnRightTop">
@@ -330,7 +334,7 @@
       </section>
       <div class="pimg pimgE"></div>
       <!--Moons-->
-      <section class="DisplayFlexRowReverseSpaceAroundTop" id="Moons">
+      <section class="DisplayFlexRowReverseSpaceAroundMiddle" id="Moons">
         <div class="DisplayFlexColumnMiddleTop firstparagraph">
           <h1>Jupiters måner</h1>
           <p class="DisplayFlexColumnRightTop">
@@ -382,14 +386,46 @@
       </section>
       <div class="pimg pimgG"></div>
       <!--kilder-->
-      <section class="DisplayFlexColumnMiddleTop" id="kilder">
+      <section class="DisplayFlexRowMiddleTop" id="kilder">
         <ul>
-          <li>førstekilde</li>
+          <li>
+            <a href="https://science.nasa.gov/jupiter/moons/europa/"
+              >https://science.nasa.gov/jupiter/moons/europa/</a
+            >
+          </li>
+          <li>
+            <a href="https://science.nasa.gov/jupiter/"
+              >https://science.nasa.gov/jupiter/</a
+            >
+          </li>
+          <li>
+            <a href="https://science.nasa.gov/jupiter/moons/all-jupiter-moons/"
+              >https://science.nasa.gov/jupiter/moons/all-jupiter-moons/</a
+            >
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <a
+              href="https://www.britannica.com/place/Jupiter-planet/The-interior"
+              >https://www.britannica.com/place/Jupiter-planet/The-interior</a
+            >
+          </li>
+          <li>
+            <a href="https://en.wikipedia.org/wiki/Rings_of_Jupiter#Main_ring"
+              >https://en.wikipedia.org/wiki/Rings_of_Jupiter#Main_ring</a
+            >
+          </li>
+          <li>
+            <a href="https://www.britannica.com/place/Great-Red-Spot"
+              >https://www.britannica.com/place/Great-Red-Spot</a
+            >
+          </li>
         </ul>
       </section>
       <div class="pimg pimgH"></div>
     </main>
     <!--footer-->
-    <footer>første footer</footer>
+    <footer class="DisplayFlexRowMiddleMiddle"><div>©Copyright</div></footer>
   </body>
 </html>
