fortsatte med oversetting

--- a/index.html
+++ b/index.html
@@ -47,12 +47,8 @@
                 </p>
               </div>
               <div class="DisplayFlexColumnLeftMiddle">
-                <div>Nøkkel-stikkord</div>
-                <ul>
-                  <li>95 måner</li>
-                  <li>2 satelitter</li>
-                  <li>Great Red Spot</li>
-                </ul>
+                <div></div>
+                <ul></ul>
               </div>
             </div>
           </div>
@@ -74,9 +70,9 @@
                       id="ImgParallaxJupiter1Swipe"
                     />
                   </div>
-                  <div class="DisplayFlexColumnLeftMiddle tekstcontainterswipe">
+                  <div id="Jupiter-swipe" class="DisplayFlexColumnLeftMiddle tekstcontainterswipe">
                     <h3>Jupiter</h3>
-                    <p>Linker til Jupiter</p>
+                    <p></p>
                   </div>
                 </div>
               </span>
@@ -93,9 +89,7 @@
                       id="ImgParallaxJupiter2Swipe"
                     />
                   </div>
-                  <div class="DisplayFlexColumnLeftMiddle tekstcontainterswipe">
-                    <h3>Atmosfæren</h3>
-                    <p>Linker til Atmosfære</p>
+                  <div id="Atmosfære-swipe" class="DisplayFlexColumnLeftMiddle tekstcontainterswipe">
                   </div>
                 </div>
               </span>
@@ -112,7 +106,7 @@
                       id="ImgGreatRedSpotSwipe"
                     />
                   </div>
-                  <div class="DisplayFlexColumnLeftMiddle tekstcontainterswipe">
+                  <div id="TheGreatRedSpot-swipe" class="DisplayFlexColumnLeftMiddle tekstcontainterswipe">
                     <h3>Great Red Spot</h3>
                     <p>Linker til <br />The Great Red Spot</p>
                   </div>
@@ -131,9 +125,7 @@
                       id="ImgParallaxRings2Swipe"
                     />
                   </div>
-                  <div class="DisplayFlexColumnLeftMiddle tekstcontainterswipe">
-                    <h3>Rings</h3>
-                    <p>Linker til Jupiters ringer</p>
+                  <div id="Ring-swipe"class="DisplayFlexColumnLeftMiddle tekstcontainterswipe">
                   </div>
                 </div>
               </span>
@@ -150,9 +142,7 @@
                       id="ImgParallaxMoonsSwipe"
                     />
                   </div>
-                  <div class="DisplayFlexColumnLeftMiddle tekstcontainterswipe">
-                    <h3>Jupiters Moons</h3>
-                    <p>Linker til månene</p>
+                  <div id="Moons-swipe" class="DisplayFlexColumnLeftMiddle tekstcontainterswipe">
                   </div>
                 </div>
               </span>
@@ -169,9 +159,9 @@
                       id="ImgParallaxEuropa2Swipe"
                     />
                   </div>
-                  <div class="DisplayFlexColumnLeftMiddle tekstcontainterswipe">
+                  <div id="Europa-swipe" class="DisplayFlexColumnLeftMiddle tekstcontainterswipe">
                     <h3>Europa</h3>
-                    <p>Linker til Europa</p>
+                    <p></p>
                   </div>
                 </div>
               </span>
@@ -188,13 +178,8 @@
           id="ImgJupiterPresenter"
         />
         <div class="DisplayFlexColumnMiddleMiddle">
-          <h1>Jupiter, en romersk gudekonge.</h1>
-          <p>
-            Jupiter har fått sitt navn fra kongen av de romerske gudene, og er
-            den største planeten i solsystemet vårt. Hvis jorden var av
-            størrelse av atomet nikkel, ville Jupiter være på størrelse med en
-            basketball, i følge NASA.
-          </p>
+          <h1></h1>
+          <p></p>
         </div>
       </section>
       <div class="pimg pimgB"></div>
@@ -202,25 +187,8 @@
       <section class="DisplayFlexRowSpaceAroundMiddle" id="Atmosfæren">
         <div class="DisplayFlexRowSpaceBetweenTop">
           <div class="DisplayFlexColumnLeftTop">
-            <h1>Atmosfæren</h1>
-            <p>
-              Jupiters observerbare atmosfære er veldig tynn. Like tynn som et
-              epleskall på et eple. Atmosfæren er den delen av en planet i
-              gassform man kan observere med det blåtte øye. <br /><br />Skallet
-              har et veldig fascinerende mønster, det kommer av vortex. Vortex
-              er turbulent fluidstrømninger, hvilket vil si at masse gass
-              virvler i fullstendig kaos. Men allikevel ser man at det er system
-              i kaoset. Vortex har en konstant vindretning. Hvert lag av farge i
-              atmosfæren, fra ekvator til polene har sin egen vindretning, og
-              mønsteret er tilsvarende symmertrisk fra ekvator og til hver sin
-              respektiv polar. Mellom lagene ser man turbulent vortex, og dens
-              retning skyldes av samme type værfenomen som man finner på jorden,
-              Coriolios effekten. <br /><br />Sentripital radiusen til Jupiters
-              kjerne er størst ved ekvator hvilke gir kraftigere vinder, og blir
-              mindre jo mer man nærmer seg polene, hvor rotasjonshastigheten er
-              null. Dette gir forskjellige regioner med lav og høytrykk som gir
-              systematiske vindretninger.
-            </p>
+            <h1 id="Atmosfære-tittel-1">Atmosfæren</h1>
+            <p id="Atmosfære-avsnitt-1"></p>
           </div>
           <div class="DisplayFlexColumnLeftTop">
             <h1>Jupiters indre</h1>
