--- a/index.html
+++ b/index.html
@@ -186,28 +186,30 @@
       <!--Atmosfæren-->
       <section class="DisplayFlexRowSpaceAroundMiddle" id="Atmosfæren">
         <div class="DisplayFlexRowSpaceBetweenTop">
-          <div class="DisplayFlexColumnLeftTop">
-            <h1 id="Atmosfære-tittel-1">Atmosfæren</h1>
-            <p id="Atmosfære-avsnitt-1"></p>
-          </div>
-          <div class="DisplayFlexColumnLeftTop">
-            <h1>Jupiters indre</h1>
-            <p>
-              Ingen mennesker eller robotiske satelitter er istand til å motstå
-              den enorme indre trykke i jupiters kjerne på 50-100 Mbar. Dermed
-              kan de bli estimert ved hjelp av modeller, balanse og
-              forstyrrelser i satelittens bane rund globen, teoretiske
-              beskrivelser, og modeller. På den måten kan man lage en skisse som
-              beskriver globens interne fordeling av materie med informasjon om
-              hvert lags temperatur og trykk, masse, radius, form,
-              rotasjons-hastigheten, varme respektivt. <br /><br />
-              Skissen over viser de forskjellige lagene av fordelingen av
-              Jupiters interne materie. Hvis Jupiter hadde vært litt større, så
-              kunne den ha vært en egen sol selv, fordi den inneholder masse av
-              reststoffene fra solen da de ble dannet. På samme måten som at
-              månen vår inneholder reststoffer fra jorden selv. Dermed
-              inneholder jupiter masse av den samme materien som solen selv.
-            </p>
+          <div class="DisplayFlexRowMiddleTop" id="Atmosfæreflex">
+            <div class="DisplayFlexColumnLeftTop">
+              <h1 id="Atmosfære-tittel-1">Atmosfæren</h1>
+              <p id="Atmosfære-avsnitt-1"></p>
+            </div>
+            <div class="DisplayFlexColumnLeftTop">
+              <h1>Jupiters indre</h1>
+              <p>
+                Ingen mennesker eller robotiske satelitter er istand til å motstå
+                den enorme indre trykke i jupiters kjerne på 50-100 Mbar. Dermed
+                kan de bli estimert ved hjelp av modeller, balanse og
+                forstyrrelser i satelittens bane rund globen, teoretiske
+                beskrivelser, og modeller. På den måten kan man lage en skisse som
+                beskriver globens interne fordeling av materie med informasjon om
+                hvert lags temperatur og trykk, masse, radius, form,
+                rotasjons-hastigheten, varme respektivt. <br /><br />
+                Skissen over viser de forskjellige lagene av fordelingen av
+                Jupiters interne materie. Hvis Jupiter hadde vært litt større, så
+                kunne den ha vært en egen sol selv, fordi den inneholder masse av
+                reststoffene fra solen da de ble dannet. På samme måten som at
+                månen vår inneholder reststoffer fra jorden selv. Dermed
+                inneholder jupiter masse av den samme materien som solen selv.
+              </p>
+            </div>
           </div>
         </div>
         <div class="DisplayFlexColumnReverseMiddleTop">
